<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_default"
        android:id="@+id/default_title_1"/>

    <CircleImageView.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pic1"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/person_page"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/chang_passwd"
        android:textSize="20sp"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/version"
        android:textSize="20sp"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"/>
</LinearLayout>