<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_psd_test"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/psd_test_back_passwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/inputPasswd"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/psd_test_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testBtn"
            android:textSize="20sp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/psd_test_back_result_list"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RelativeLayout
            android:id="@+id/psd_test_back_part1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:id="@+id/strong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testResultText1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/psd_test_back_result_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/strong"
                android:textSize="20sp"
                android:layout_toEndOf="@id/strong" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/psd_test_back_part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/psd_test_back_part1">
            <TextView
                android:id="@+id/advice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testResultText2"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/psd_test_back_result_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/advice"
                android:textSize="20sp"
                android:layout_toEndOf="@id/advice" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>